# forge-compiler

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  hello  vec2
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
benchmarks/: fib.c  fib.fg  fib.rs  fib.zig  run.sh
docs/: 01-language-design.md  02-lexer.md  03-parser.md  04-interpreter.md  05-whats-next.md  06-codegen.md  07-borrowck.md  08-comptime.md  09-stdlib.md  10-comparisons.md  11-self-hosting.md  DEVELOPERS.md
editors/lsp/: README.md
editors/nvim/: README.md
editors/vscode/: README.md  extension.js  language-configuration.json  package-lock.json  package.json
examples/: json_parser.fg
examples/aoc/: day1_part1.fg  day1_part2.fg  day2_part1.fg
self-host/: ast.fg  codegen.fg  compile.fg  lexer.fg  parser.fg  test_codegen.fg  test_codegen_vec2.fg  test_lexer.fg  test_lexer_vec2.fg  test_parser.fg  test_parser_vec2.fg
src/: lib.rs  lsp.rs  main.rs
src/ast/: mod.rs
src/borrowck/: mod.rs  tests.rs
src/codegen/: mod.rs  tests.rs
src/comptime/: mod.rs  tests.rs
src/hir/: lower.rs  mod.rs  tests.rs
src/interpreter/: mod.rs  tests.rs
src/lexer/: mod.rs  tests.rs  token.rs
src/parser/: mod.rs  tests.rs
src/resolve/: mod.rs
src/stdlib/: mod.rs  tests.rs
src/typeck/: check.rs  mod.rs  scope.rs  tests.rs  types.rs
tests/: m12_integration.rs  m1_strings.rs  m2_arrays.rs  m3_generics.rs  m4_result_option.rs  m5_hashmap.rs  m6_file_io.rs  m7_modules.rs  m8_m11.rs  mut_ref.rs  mut_self.rs  nested_mut_self.rs
tests/samples/: buffer.fg  hello.fg  (+9 more)
(+3 files in other folders)
